# tree-sinker

./: .gitignore  Cargo.toml  MANIFEST.in  README  README.md  pyproject.toml
etc/: tree-packer.ini  tree-sinker.ini
etc/systemd/system/: tree-sinker@.service  tree-sinker@.timer  var-db-repos-gentoo.mount
man/: tree-packer.1  tree-sinker.1
src/: conf.py  index.rst  main.rs
src/tree-sinker/: __main__.py
src/tree_sinker/: __init__.py  main.py  packer.py  sinker.py  support.py
tests/: test_configure.py  test_confirm_and_open_file.py
usr/lib/systemd/system/: tree-sinker@.service
